# ink

./: .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  1.rs  2.rs  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.adoc  CONTRIBUTING.md  Cargo.lock.old  Cargo.toml  FILE_HEADER  LICENSE_TEMPLATE  MONTHLY_UPDATE.md  README.md  RELEASES.md  RELEASES_CHECKLIST.md  SECURITY.md  _config.yml  aliases.js  bors.toml  call-contract.sh  crates.js  deploy-contract.sh  help.html  main.js  normalize.css  rust-toolchain  rustdoc.css  search-index.js  search.js  settings.html  source-files.js  source-script.js  src-files.js  to write smart contracts
abi/: Cargo.toml
abi/derive/: Cargo.toml
abi/src/: abi_type.rs  layout.rs  layout2.rs  lib.rs  specs.rs  tests.rs  tuple_vec.rs  utils.rs
alloc/: Cargo.toml  README.md
alloc/src/: handlers.rs  lib.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs
cli/template/: Cargo.toml  build.sh  lib.rs  rust-toolchain
core/: Cargo.toml  bench2.rs
core/benches/: bench.rs  bench_binary_heap.rs  bench_bitstash.rs  bench_cell.rs  bench_hashmap.rs  bench_lazy.rs  bench_stash.rs  bench_vec.rs
core/derive/: Cargo.toml
core/src/: byte_utils.rs  hash.rs  lib.rs  memory.rs  panic_handler.rs  test_utils.rs
crates/allocator/: Cargo.toml
crates/build-script-utils/: Cargo.toml
crates/e2e/: Cargo.toml
crates/engine/: Cargo.toml
crates/env/: Cargo.toml  build.rs
crates/env_types/: Cargo.toml
crates/eth_compatibility/: Cargo.toml
crates/ink/: Cargo.toml
crates/lang/: Cargo.toml
crates/metadata/: Cargo.toml  README.md  contract_schema.json  ink-v3-schema.json  outer-schema.json  outer_schema.json
crates/precompiles/: Cargo.toml
crates/prelude/: Cargo.toml  lib.rs
examples/: Cargo.toml  README.md
examples/amm/: Cargo.toml  lib.rs
examples/bioc/: Cargo.toml  lib.rs
examples/bug/: Cargo.toml  lib.rs
examples/call-runtime/: Cargo.toml  README.md  lib.rs
examples/complex-storage-structures/: Cargo.toml  README.md  lib.rs
examples/contract-terminate/: Cargo.toml  lib.rs  test_utils.rs
examples/contract-transfer/: Cargo.toml  lib.rs
examples/cross_chain_ref/: Cargo.toml  lib.rs
examples/cross_chain_test/: Cargo.toml  lib.rs
examples/custom-environment/: Cargo.toml  README.md  lib.rs
examples/custom_allocator/: Cargo.toml  lib.rs
examples/delegator/: Cargo.toml  README.md  build-all.sh  lib.rs
examples/dns/: Cargo.toml  README.md  lib.rs
examples/enzyme/: Cargo.toml  README.md  build.sh
examples/erc1155/: Cargo.toml  lib.rs
examples/erc20/: Cargo.toml  lib.rs
examples/erc721/: Cargo.toml  lib.rs
examples/fleet_inc/: Cargo.toml  build.sh
examples/flipper/: Cargo.toml  lib.rs
examples/incrementer/: Cargo.toml  lib.rs
examples/is-contract/: .gitignore  Cargo.toml  lib.rs
examples/lang_err_integration_tests/: Cargo.toml  lib.rs
examples/lazy-flipper/: lib.rs
examples/lock-until/: Cargo.toml  lib.rs
examples/mapping_integration_tests/: Cargo.toml  lib.rs
examples/mappings/: Cargo.toml  lib.rs
examples/mother/: Cargo.toml  lib.rs
examples/multisig/: Cargo.toml  lib.rs
examples/multisig_plain/: Cargo.toml  lib.rs
examples/noop/: Cargo.toml  build.sh  noop.rs
examples/payment-channel/: Cargo.toml  lib.rs
examples/payment_channel/: Cargo.toml  README.md  lib.rs
examples/proxy/: Cargo.toml  README.md  lib.rs
examples/psp22-extension/: Cargo.toml  README.md  lib.rs
examples/psp22_extension/: Cargo.toml  lib.rs
examples/quickcheck_tests/: Cargo.toml  expand.rs  lib.rs
examples/rand-extension/: Cargo.toml  README.md  lib.rs
examples/reentrancy/: .gitignore  Cargo.toml  README.md  lib.rs
examples/return_err/: Cargo.toml  lib.rs
examples/rock-paper-scissors/: Cargo.toml  game.rs  lib.rs
examples/runtime-storage/: Cargo.toml  lib.rs
examples/subpeep/: Cargo.toml  README.md
examples/trait-erc20/: Cargo.toml  lib.rs
examples/trait-flipper/: Cargo.toml  lib.rs
examples/trait-incrementer/: Cargo.toml  lib.rs
examples/upgradable-contract/: Cargo.toml  README.md  lib.rs
examples/upgradeable-contract/: Cargo.toml  README.md  lib.rs
examples/upgradeable-contracts/: README.md
integration-tests/: Cargo.toml  README.md  clean-all.sh
integration-tests/associated-messages/: Cargo.toml  lib.rs
integration-tests/basic-contract-caller/: Cargo.toml  e2e_tests.rs  lib.rs
integration-tests/basic_contract_caller/: Cargo.toml  lib.rs
integration-tests/basic_contract_ref/: Cargo.toml  lib.rs
integration-tests/builder_contract_caller/: Cargo.toml  lib.rs
integration-tests/call-builder-return-value/: Cargo.toml  lib.rs
integration-tests/call-runtime/: Cargo.toml  README.md  lib.rs
integration-tests/caller-is-origin/: Cargo.toml  lib.rs
integration-tests/combined-extension/: Cargo.toml  lib.rs
integration-tests/complex-storage-structures/: Cargo.toml  README.md
integration-tests/conditional-compilation/: Cargo.toml  expand.rs  lib.rs
integration-tests/contract-invocation/: lib.rs
integration-tests/contract-storage/: Cargo.toml  e2e_tests.rs  lib.rs
integration-tests/contract-terminate/: Cargo.toml  lib.rs
integration-tests/contract-transfer/: Cargo.toml  lib.rs
integration-tests/contract-xcm/: Cargo.toml  lib.rs
integration-tests/cross-contract-calls/: Cargo.toml  e2e_tests.rs  lib.rs
integration-tests/custom-allocator/: Cargo.toml  lib.rs
integration-tests/custom-environment/: Cargo.toml  lib.rs
integration-tests/custom_allocator/: Cargo.toml  lib.rs
integration-tests/dao/: .pre-commit-config.yaml  Cargo.toml  README.md  lib.rs  tests.rs
integration-tests/default-accounts/: Cargo.toml  lib.rs
integration-tests/delegatecall-bug/: Cargo.toml  lib.rs
lang/: Cargo.toml
lang2/: Cargo.toml
linting/: Cargo.toml  README.md  rust-toolchain.toml
model/: Cargo.toml  README.md
pdsl_core/: Cargo.toml  all.html  index.html  macro.println.html  sidebar-items.js  trait.Setup.html
pdsl_derive/: Cargo.toml
pdsl_tests/: Cargo.toml  all.html  index.html  sidebar-items.js
utils/: Cargo.toml
(+16109 files in other folders)
