[workspace]
resolver = "2"
members = [
    "crates/allocator",
    "crates/e2e",
    "crates/e2e/macro",
    "crates/e2e/sandbox",
    "crates/engine",
    "crates/env",
    "crates/ink",
    "crates/ink/codegen",
    "crates/ink/ir",
    "crates/ink/macro",
    "crates/metadata",
    "crates/prelude",
    "crates/primitives",
    "crates/storage",
    "crates/storage/traits",
]
exclude = [
    "integration-tests",
    "linting",
]

[workspace.package]
authors = ["Use Ink <ink@use.ink>"]
categories = ["no-std", "embedded"]
edition = "2021"
homepage = "https://use.ink"
keywords = ["wasm", "ink", "webassembly", "blockchain", "edsl"]
license = "Apache-2.0"
repository = "https://github.com/use-ink/ink"
version = "5.1.0"

[workspace.dependencies]
arrayref = { version = "0.3" }
array-init = { version = "2.0", default-features = false }
blake2 = { version = "0.10" }
cargo_metadata = { version = "0.19.0" }
cfg-if = { version = "1.0" }
contract-build = { version = "5.0.1" }
darling = { version = "0.20.10" }
derive_more = { version = "1.0.0", default-features = false }
either = { version = "1.13", default-features = false }
funty = { version = "2.0.0" }
heck = { version = "0.5.0" }
impl-serde = { version = "0.5.0", default-features = false }
itertools = { version = "0.13.0", default-features = false }
jsonrpsee = { version = "0.24.7" }
linkme = { version = "0.3.30" }
num-traits = { version = "0.2", default-features = false }
paste = { version = "1.0" }
pretty_assertions = { version = "1" }
proc-macro2 = { version = "1" }
quickcheck = { version = "1" }
quickcheck_macros = { version = "1" }
quote = { version = "1" }
rlibc = { version = "1" }
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-decode = { version = "0.14.0", default-features = false }
scale-encode = { version = "0.8.0", default-features = false }
scale-info = { version = "2.11", default-features = false }
schemars = { version = "0.8" }
secp256k1 = { version = "0.30.0" }
serde = { version = "1.0.215", default-features = false }
serde_json = { version = "1.0.133" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
static_assertions = { version = "1.1" }
subxt = { version = "0.38.0" }
subxt-metadata = { version = "0.38.0" }
subxt-signer = { version = "0.38.0" }
syn = { version = "2" }
synstructure = { version = "0.13.1" }
thiserror = { version = "2.0.4" }
tokio = { version = "1.41.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
trybuild = { version = "1.0.101" }
wasm-instrument = { version = "0.4.0" }
which = { version = "7.0.0" }
xxhash-rust = { version = "0.8" }
const_env = { version = "0.1"}
wat = { version = "1.221.2" }

# Substrate dependencies
frame-metadata = { version = "16.0.0" }
frame-system = { version = "38.0.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
pallet-contracts = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-contracts-uapi = { version = "12.0.0", default-features = false }
pallet-revive-uapi = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-rc2", default-features = false }
# TODO include mock-network for revive
pallet-contracts-mock-network = { version = "14.0.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-runtime-interface = { version = "28.0.0" }
sp-core = { version = "34.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.2", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
xcm = { package = "staging-xcm", version = "14.2.0", default-features = false }

# PolkaVM dependencies
polkavm-derive = {  version = "0.17.1", default-features = false }

# Local dependencies
ink = { version = "=5.1.0", path = "crates/ink", default-features = false }
ink_allocator = { version = "=5.1.0", path = "crates/allocator", default-features = false }
ink_codegen = { version = "=5.1.0", path = "crates/ink/codegen", default-features = false }
ink_e2e_macro = { version = "=5.1.0", path = "crates/e2e/macro", default-features = false }
ink_engine = { version = "=5.1.0", path = "crates/engine", default-features = false }
ink_env = { version = "=5.1.0", path = "crates/env", default-features = false }
ink_ir = { version = "=5.1.0", path = "crates/ink/ir", default-features = false }
ink_macro = { version = "=5.1.0", path = "crates/ink/macro", default-features = false }
ink_metadata = { version = "=5.1.0", path = "crates/metadata", default-features = false }
ink_prelude = { version = "=5.1.0", path = "crates/prelude", default-features = false }
ink_primitives = { version = "=5.1.0", path = "crates/primitives", default-features = false }
ink_storage = { version = "=5.1.0", path = "crates/storage", default-features = false }
ink_storage_traits = { version = "=5.1.0", path = "crates/storage/traits", default-features = false }

[profile.release]
panic = "abort"
lto = true
