[workspace]
resolver = "2"
members = [
    "crates/allocator",
    "crates/e2e",
    "crates/e2e/macro",
    "crates/e2e/sandbox",
    "crates/engine",
    "crates/env",
    "crates/ink",
    "crates/ink/codegen",
    "crates/ink/ir",
    "crates/ink/macro",
    "crates/metadata",
    "crates/prelude",
    "crates/primitives",
    "crates/storage",
    "crates/storage/traits",
]
exclude = [
    "integration-tests",
    "linting",
]

[workspace.package]
authors = ["Use Ink <ink@use.ink>"]
categories = ["no-std", "embedded"]
edition = "2021"
homepage = "https://use.ink"
keywords = ["polkavm", "ink", "riscv", "blockchain", "edsl"]
license = "Apache-2.0"
repository = "https://github.com/use-ink/ink"
version = "6.0.0-alpha"

[workspace.dependencies]
arrayref = { version = "0.3" }
array-init = { version = "2.0", default-features = false }
blake2 = { version = "0.10" }
cargo_metadata = { version = "0.19.0" }
cfg-if = { version = "1.0" }
contract-build = { git = "https://github.com/use-ink/cargo-contract", branch = "master" }
darling = { version = "0.20.10" }
derive_more = { version = "1.0.0", default-features = false }
either = { version = "1.13", default-features = false }
funty = { version = "2.0.0" }
heck = { version = "0.5.0" }
impl-serde = { version = "0.5.0", default-features = false }
itertools = { version = "0.14.0", default-features = false }
jsonrpsee = { version = "0.24" }
linkme = { version = "0.3.30" }
num-traits = { version = "0.2", default-features = false }
paste = { version = "1.0" }
pretty_assertions = { version = "1" }
proc-macro2 = { version = "1" }
quickcheck = { version = "1" }
quickcheck_macros = { version = "1" }
quote = { version = "1" }
alloy-rlp = { version = "0.3.9", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-decode = { version = "0.14.0", default-features = false }
scale-encode = { version = "0.8.0", default-features = false }
scale-info = { version = "2.11", default-features = false }
schemars = { version = "0.8" }
secp256k1 = { version = "0.30.0" }
serde = { version = "1.0.215", default-features = false }
serde_json = { version = "1.0.137" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
static_assertions = { version = "1.1" }
subxt = { version = "0.38" }
subxt-metadata = { version = "0.38" }
subxt-signer = { version = "0.38" }
syn = { version = "2" }
synstructure = { version = "0.13.1" }
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
trybuild = { version = "1.0.102" }
which = { version = "7.0.0" }
xxhash-rust = { version = "0.8" }
const_env = { version = "0.1"}

# Substrate dependencies
frame-metadata = { version = "19.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
pallet-revive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
pallet-revive-uapi = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false, features = ["unstable-hostfn"] }
pallet-revive-mock-network = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false, features = ["disable_target_static_assertions"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }

#frame-system = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/system", default-features = false }
#frame-support = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/support", default-features = false }
#pallet-balances = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/balances", default-features = false }
#pallet-timestamp = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/timestamp", default-features = false }
#pallet-revive = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/revive", default-features = false }
#pallet-revive-uapi = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/revive/uapi", default-features = false, features = ["unstable-hostfn"] }
#pallet-revive-mock-network = { path = "/Users/michi/projects/polkadot-sdk/substrate/frame/revive/mock-network", default-features = false }
#sp-externalities = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/externalities", default-features = false }
#sp-io = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/io", default-features = false }
#sp-runtime-interface = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/runtime-interface", default-features = false, features = ["disable_target_static_assertions"] }
#sp-core = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/core", default-features = false }
#sp-keyring = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/keyring", default-features = false }
#sp-runtime = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/runtime", default-features = false }
#sp-weights = { path = "/Users/michi/projects/polkadot-sdk/substrate/primitives/weights", default-features = false }
#xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", rev = "4a400dc1866f11707331fb6408df1055d0f42a70", default-features = false }

# PolkaVM dependencies
polkavm-derive = { version = "0.19.0", default-features = false }
#polkavm-derive = { git = "https://github.com/paritytech/polkavm", rev = "cc58f473a791c3b6da28bdccbc0bfa65ac63f685", default-features = false }

# Local dependencies
ink = { version = "=6.0.0-alpha", path = "crates/ink", default-features = false }
ink_allocator = { version = "=6.0.0-alpha", path = "crates/allocator", default-features = false }
ink_codegen = { version = "=6.0.0-alpha", path = "crates/ink/codegen", default-features = false }
ink_e2e_macro = { version = "=6.0.0-alpha", path = "crates/e2e/macro", default-features = false }
ink_engine = { version = "=6.0.0-alpha", path = "crates/engine", default-features = false }
ink_env = { version = "=6.0.0-alpha", path = "crates/env", default-features = false }
ink_ir = { version = "=6.0.0-alpha", path = "crates/ink/ir", default-features = false }
ink_macro = { version = "=6.0.0-alpha", path = "crates/ink/macro", default-features = false }
ink_metadata = { version = "=6.0.0-alpha", path = "crates/metadata", default-features = false }
ink_prelude = { version = "=6.0.0-alpha", path = "crates/prelude", default-features = false }
ink_primitives = { version = "=6.0.0-alpha", path = "crates/primitives", default-features = false }
ink_storage = { version = "=6.0.0-alpha", path = "crates/storage", default-features = false }
ink_storage_traits = { version = "=6.0.0-alpha", path = "crates/storage/traits", default-features = false }

[profile.release]
panic = "abort"
lto = true
