[package]
name = "ink_abi"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
parity-codec = { version = "4.1", default-features = false, features = ["derive", "full"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
json = { package = "serde_json", version = "1.0" }
derive_more = { version = "0.14" }
ink_abi_derive = { version = "0.1.0", path = "derive", default-features = false, optional = true }

type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", branch = "fix-serde-flatten", features = ["derive"] }

[features]
default = ["std", "derive"]
derive = ["ink_abi_derive"]
std = [
    "ink_abi_derive/std",
    "serde/std",
    "type-metadata/std",
    "parity-codec/std"
]
