[package]
name = "ink_abi"
version = "2.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_abi_derive = { version = "2.1.0", path = "derive", default-features = false, optional = true }
ink_prelude = { version = "2.1.0", path = "../prelude/", default-features = false }
ink_primitives = { version = "2.1.0", path = "../primitives/", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"

[features]
default = [
    "std",
    "derive",
]
std = [
    "ink_abi_derive/std",
    "ink_prelude/std",
    "serde/std",
    "type-metadata/std",
]
derive = [
    "ink_abi_derive"
]
