[package]
name = "cargo-contract"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Setup and deployment tool for developing Wasm based smart contracts via ink!"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["cli", "tool"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
derive_more = "0.14.0"
structopt = "0.2.15"
itertools = "0.8"
heck = "0.3"
zip = { version = "0.5", default-features = false }
pwasm-utils = "0.11.0"
parity-wasm = "0.40.2"
cargo_metadata = "0.8.2"

[build-dependencies]
zip = { version = "0.5", default-features = false }
walkdir = "1.0"

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = []
test-ci-only = []
