[package]
name = "cargo-contract"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

license = "GPL-3.0"
readme = "README.md"

description = "Setup and deployment tool for developing Wasm based smart contracts via ink!"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["cli", "tool"]

include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]

[dependencies]
env_logger = "0.6"
derive_more = "0.14.0"
structopt = "0.2.15"
itertools = "0.8"
log = "0.4"
heck = "0.3"
futures = "0.1.28"
jsonrpc-core-client = { version = "13.0", features = ["ws"] }
zip = { version = "0.5", default-features = false }
pwasm-utils = "0.11.0"
parity-wasm = "0.40.2"
cargo_metadata = "0.8.2"
substrate-primitives = { git = "https://github.com/paritytech/substrate/", package = "substrate-primitives" }
subxt = { git = "https://github.com/paritytech/substrate-subxt/", branch = "v0.1", package = "substrate-subxt" }
tokio = "0.1.21"
url = "1.7"

[build-dependencies]
zip = { version = "0.5", default-features = false }
walkdir = "1.0"

[dev-dependencies]
assert_matches = "1.3.0"
tempfile = "3.1.0"
wabt = "0.9.0"

[features]
default = []
test-ci-only = []
