[package]
name = "cargo-contract"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "Setup and deployment tool for developing Wasm based smart contracts via ink!"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["cli", "tool"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
env_logger = "0.7"
derive_more = { version = "0.99.2", default-features = false, features = ["from", "display"] }
structopt = "0.3"
itertools = "0.8"
log = "0.4"
heck = "0.3"
futures = "0.1.28"
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
zip = { version = "0.5", default-features = false }
pwasm-utils = "0.12"
parity-wasm = "0.41"
cargo_metadata = "0.9"
substrate-primitives = { git = "https://github.com/paritytech/substrate/", package = "substrate-primitives" }
subxt = { git = "https://github.com/paritytech/substrate-subxt/", branch = "v0.2", package = "substrate-subxt" }
tokio = "0.1.21"
url = "1.7"

[build-dependencies]
zip = { version = "0.5", default-features = false }
walkdir = "2.2"

[dev-dependencies]
assert_matches = "1.3.0"
tempfile = "3.1.0"
wabt = "0.9.0"

[features]
default = []
test-ci-only = []
