[package]
name = "ink_core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_abi = { path = "../abi/", default-features = false, features = ["derive"], optional = true }
ink_alloc = { path = "../alloc/", default-features = false }
ink_utils = { path = "../utils/" }
ink_core_derive = { version = "0.1.0", path = "derive", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive", "full"] }
type-metadata = { git = "https://github.com/type-metadata/type-metadata.git", default-features = false, features = ["derive"], optional = true }
derive_more = { version = "0.99.2", default-features = false, features = ["from"] }
smallvec = { version = "1.0", default-features = false, features = ["union"] }
cfg-if = "0.1"

[features]
default = ["test-env"]
derive = [
    "ink_core_derive",
]
test-env = [
    "std",
]
std = [
    "ink_abi/std",
    "ink_alloc/std",
    "scale/std",
    "type-metadata/std",
]
ink-generate-abi = [
    "ink_abi",
    "type-metadata",
    "std",
]
