[package]
name = "ink_core"
version = "2.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_abi = { version = "2.1.0", path = "../abi/", default-features = false, features = ["derive"], optional = true }
ink_alloc = { version = "2.1.0", path = "../alloc/", default-features = false }
ink_primitives = { version = "2.1.0", path = "../primitives/", default-features = false }
ink_core_derive = { version = "2.1.0", path = "derive", default-features = false }
ink_prelude = { version = "2.1.0", path = "../prelude/", default-features = false }

scale = { package = "parity-scale-codec", version = "1.2", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }
smallvec = { version = "1.2", default-features = false, features = ["union"] }
cfg-if = "0.1"
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
paste = "0.1"

# Hashes for the off-chain environment.
byteorder = { version = "1.3", optional = true }
blake2-rfc = { version = "0.2", optional = true }
sha2 = { version = "0.8", optional = true }
tiny-keccak = { version = "2.0", optional = true }

# Only used in the off-chain environment.
#
# Sadly couldn't be marked as dev-dependency.
# Never use this crate outside of the off-chain environment!
rand = { version = "0.7", default-features = false, features = ["alloc"], optional = true }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
itertools = "0.9"

[features]
default = ["std"]
std = [
    "ink_abi/std",
    "ink_alloc/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "type-metadata/std",
    "rand",
    "rand/std",
    "num-traits/std",
    # Enables hashing crates for off-chain environment.
    "byteorder",
    "blake2-rfc",
    "sha2",
    "tiny-keccak",
]
ink-generate-abi = [
    "ink_abi",
    "type-metadata",
    "std",
]
