# This workspace has just been created so that dependabot can
# batch upgrades to the example dependencies into a single PR,
# instead of multiple isolated ones.
[workspace]
members = ["./*"]
exclude = [
    # we need to exclude `delegator` since it's a separate workspace
    # and nested workspaces are not allowed.
    "delegator",
]
