[workspace]
members = [
    "call-builder-return-value",
    "call-runtime",
    "combined-extension",
    "conditional-compilation",
    "contract-storage",
    "contract-terminate",
    "contract-transfer",
    "cross-contract-calls",
    "custom-allocator",
    "custom-environment",
    "dns",
    "e2e-call-runtime",
    "e2e-runtime-only-backend",
    "erc1155",
    "erc20",
    "erc721",
    "events",
    "flipper",
    "incrementer",
    "lazyvec-integration-test",
    "mapping-integration-tests",
    "mother",
    "multisig",
    "payment-channel",
    "psp22-extension",
    "rand-extension",
    "sr25519-verification",
    "trait-erc20",
    "trait-flipper",
    "trait-incrementer",
    "wildcard-selector",
]
exclude = [
    "lang-err-integration-tests",
    "static-buffer",
    "upgradeable-contracts"
]
resolver = "2"