[package]
name = "ink_lang"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_utils = { path = "../utils/" }
ink_model = { path = "../model/", default-features = false }
scale = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }

quote = "1.0"
syn = { version = "1.0", features = ["parsing", "full", "extra-traits"] }
proc-macro2 = "1.0"
heck = "0.3"
itertools = { version = "0.8", default-features = false }
either = { version = "1.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "ink_lang"
proc-macro = true

[features]
default = ["test-env"]
test-env = [
    "std",
    "ink_model/test-env",
]
std = [
    "ink_model/std",
    "scale/std",
    "itertools/use_std",
    "either/use_std",
    "serde/std",
]
ink-generate-abi = [
    "std",
]
