[package]
name = "ink_lang"
version = "2.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/ink"
documentation = "https://substrate.dev/substrate-contracts-workshop/#/"
homepage = "https://www.parity.io/"
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_core = { version = "2.1.0", path = "../core", default-features = false }
ink_primitives = { version = "2.1.0", path = "../primitives", default-features = false }
ink_abi = { version = "2.1.0", path = "../abi", default-features = false, optional = true }
ink_prelude = { version = "2.1.0", path = "../prelude/", default-features = false }
ink_lang_macro = { version = "2.1.0", path = "macro", default-features = false }

scale = { package = "parity-scale-codec", version = "1.2", default-features = false, features = ["derive", "full"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }

[features]
default = ["test-env"]
test-env = [
    "std",
    "ink_lang_macro/test-env",
]
std = [
    "ink_abi/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_core/std",
    "ink_lang_macro/std",
    "scale/std",
]
ink-generate-abi = [
    "std",
    "ink_abi",
    "ink_core/ink-generate-abi",
]
