[workspace]
resolver = "2"
members = [
    "mandatory",
    "extra",
    "utils",
]

[workspace.package]
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/use-ink/ink"
homepage = "https://use.ink"
keywords = ["ink", "blockchain", "edsl", "dylint", "linting"]

[workspace.dependencies]
ink_linting_utils = { version = "=6.0.0-alpha.1", path = "utils" }

tokio = { version = "1.46.1", features = ["parking_lot", "net"], default-features = true }

[workspace.metadata.dylint]
libraries = [
    { path = "mandatory" },
    { path = "extra" },
]
