[workspace]
resolver = "2"
members = [
    "mandatory",
    "extra",
    "utils",
]

[workspace.package]
version = "6.0.0-alpha.4"
authors = ["Use Ink <ink@use.ink>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/use-ink/ink"
homepage = "https://use.ink"
keywords = ["ink", "blockchain", "edsl", "dylint", "linting"]

[workspace.dependencies]
ink_linting_utils = { version = "=6.0.0-alpha.4", path = "utils" }

[workspace.metadata.dylint]
libraries = [
    { path = "mandatory" },
    { path = "extra" },
]
